--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             const percent = totalPerDiagonal[d] ? ((sumOKNDF / totalPerDiagonal[d]) * 100).toFixed(1) : '0.0';
             td.textContent = percent + '%';
           } else {
-            td.textContent =     ` ${sumOKNDF} / ${daysCount}`;
+            td.textContent =     ` ${sumOKNDF} / ${daysCount}day`;
           }
         } else {
           td.textContent = '-';
