--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             const percent = totalPerDiagonal[d] ? ((sum / totalPerDiagonal[d]) * 100).toFixed(1) : '0.0';
             td.textContent = percent + '%';
           } else {
-            td.textContent = sumOKNDF;
+            td.textContent = `${s.OK}/${s.NDF} / ${daysCount}`;
           }
         } else {
           td.textContent = '-';
