--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
     });
 
     const thTotal = document.createElement('th');
-    thTotal.textContent = 'Итого';
+    thTotal.textContent = 'Total';
     thTotal.classList.add('total-col');
     headerRow.appendChild(thTotal);
 
     const thDays = document.createElement('th');
-    thDays.textContent = '1 day';
+    thDays.textContent = ' Day';
     headerRow.appendChild(thDays);
 
     const thAvg = document.createElement('th');
